rust/kcl-lib/tests/argument_error/execution_error.snap
---
source: kcl/src/simulation_tests.rs
description: Error from executing argument_error.kcl
---
KCL Type error

  × type: Expected an array but found Function
   ╭─[5:5]
 4 │ 
 5 │ map(f, [0, 1])
   ·     ┬
   ·     ╰── tests/argument_error/input.kcl
   ╰────
